tests/invalid/simple/While_CompileFail_3.whiley
void System::main([string] args):
    int i=0
    int r
    while i < |args|:
        r = r + |args[i]|
    print str(r)
